--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,9 @@ fabric.properties
 
 # Editor-based Rest Client
 .idea/httpRequests
+.project
+bin/business/AddCopyController.class
+*.class
+bin/ui/AddCopyWindow.fxml
+bin/ui/CheckoutForm.fxml
+bin/ui/MemberAddWindow.fxml
