--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,12 @@ bin/ui/AddCopyWindow.fxml
 bin/ui/CheckoutForm.fxml
 bin/ui/MemberAddWindow.fxml
 Library/src/ui/.DS_Store
+
+# OS generated files #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
